--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -11,8 +11,14 @@
         <div class="col-md-7 text-center">
 
                  <h1>Simply Your Todos. Woo!</h1>
-            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
-        <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
+            <p>Life is fun. But life is also busy. which is why,we created this <u>site</u> just for you. We created <b><i>Todo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+        {% if user.is_authenticated %}
+            <a role="button" class="btn btn-primary btn-lg" href="{% url 'currenttodos' %}">Start</a>
+
+       {% else %}
+            <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
+
+        {% endif %}
         </div>
     </div>
 
